--- a/css/base.css
+++ b/css/base.css
@@ -237,3 +237,18 @@ input{
 	width: 100%;
 	height:500px;
 }
+/* x溢出左右滑动 */
+.slide-wrap{
+	overflow-x: scroll;
+	overflow-y: hidden;
+    -webkit-overflow-scrolling: touch;
+}
+/* 无缝滚动 */
+.scrolling{
+	height:26px;
+	overflow-y: hidden;
+}
+.scrolling li{
+	width:100%;
+	height:26px;
+}
